--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "lodash": "^4.17.10",
-    "lodash-uuid": "0.0.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-infinite-scroller": "^1.1.4",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
-    "styled-components": "^3.3.2"
+    "styled-components": "^3.3.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -35,8 +37,11 @@
     "@types/lodash": "^4.14.109",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
+    "@types/react-infinite-scroller": "^1.0.6",
     "@types/react-redux": "^6.0.2",
+    "@types/react-router-dom": "^4.2.7",
     "@types/react-test-renderer": "^16.0.1",
+    "@types/uuid": "^3.4.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.1.0",
